terminamos las descripciones de los proyectos: PC-OFICINA

--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -105,7 +105,7 @@
   <div *ngIf="showFragment" class="contacto contacto__contact">
 
     <section>
-      <app-card-animated [fontSizeText]="'1.5rem'" [fontSizeSpan]="'6rem'" [width]="'21rem'" [height]="'33rem'" [fontSize]="'2.5rem'" svgName="phone_in_talk" title="Hablá con nosotros" subtitle_1="+54 9 (3462) 553824" subtitle_2="537066"/>
+      <app-card-animated data-aos="flip-up" [fontSizeText]="'1.5rem'" [fontSizeSpan]="'6rem'" [width]="'21rem'" [height]="'33rem'" [fontSize]="'2.5rem'" svgName="phone_in_talk" title="Hablá con nosotros" subtitle_1="+54 9 (3462) 553824" subtitle_2="537066"/>
     </section>
 
     <section>
