--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -29,7 +29,7 @@
 
   <p-card  [header]="proyecto.nombre">
       <div style="margin-bottom: 0.3rem" *ngFor="let opcion of getDescripcionOpciones(proyecto.descripcion.opciones)">
-        <i class="pi pi-chevron-circle-right" style="color: #FFC107; font-size: 0.8rem;"></i> {{ opcion }}
+        <i class="pi pi-chevron-circle-right" style="color: #FFC107; font-size: 0.8rem; margin-right: 0.3rem;"></i> {{ opcion }}
       </div>
   </p-card>
     <!-- GALERIA DE IMAGENES -->
