--- a/src/app/client/shared/header-responsive/header-responsive.component.html
+++ b/src/app/client/shared/header-responsive/header-responsive.component.html
@@ -4,15 +4,15 @@
 
   <div class="header_responsive__content">
 
-    <h1 class="header_responsive__content__title-1">Bienvenidos a </h1>
+    <h1 class="header_responsive__content__title-1 animate__animated animate__fadeInLeft">Bienvenidos a </h1>
 
-    <h1 class="header_responsive__content__title-2"> BASAMENTO SRL </h1>
+    <h1 class="header_responsive__content__title-2 animate__animated animate__fadeInRight"> BASAMENTO SRL </h1>
 
-    <h4 class="header_responsive__content__subtitle">Ingeniería y Construcción</h4>
+    <h4 class="header_responsive__content__subtitle animate__animated animate__zoomIn">Ingeniería y Construcción</h4>
 
     <div>
 
-    <button  (click)="WithDelay()" class="Btn">
+    <button  (click)="WithDelay()" class="Btn animate__animated animate__backInDown">
       <svg height="1.2em" class="arrow" viewBox="0 0 512 512"><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"></path></svg>
     </button>
 
