--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -112,7 +112,8 @@
         justify-content: space-evenly;
         align-items: center;
         background-color: #0077B5;
-        height: 25rem;
+        padding: 2rem;
+        height: auto;
         width: 68.75rem;
         border-radius: 0 0 0.7rem 0.7rem;
 
@@ -127,16 +128,23 @@
           width: 35rem;
         }
 
+        @media screen and (max-width: 370px) {
+          width: 30rem;
+        }
+
         h2 {
           font-size: 2.5rem;
+          margin-bottom: 1rem;
         }
 
         p {
           width: 85%;
-          text-align: center;
+          text-align: justify;
+          width: 100%;
           font-size: 1.2rem;
-          @media screen and (max-width: 460px) {
-            margin-bottom: 1rem;
+          margin-bottom: 1rem;
+          @media screen and (max-width: 600px) {
+            margin-bottom: 2.5rem;
           }
         }
       }
