--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -64,25 +64,15 @@ $transition-duration: 0.3s;
 
 
   &__container {
-    max-width: 75rem;
+    width: calc(100% - 30%);
     margin: 0 auto;
     @media screen and (max-width: 800px) {
-      max-width: 55rem;
+      width: calc(100% - 20%);
     }
     @media screen and (max-width: 700px) {
-      max-width: 50rem;
+      width: calc(100% - 15%);
     }
-    @media screen and (max-width: 520px) {
-      max-width: 45rem;
-    }
-    @media screen and (max-width: 470px) {
-      max-width: 40rem;
-    }
-    @media screen and (max-width: 430px) {
-      max-width: 35rem;
-    }
-
-
+ 
   }
 
   &__content {
@@ -125,13 +115,11 @@ $transition-duration: 0.3s;
       h2 {
         margin-bottom: 1rem;
       }
-      @media screen and (max-width: 800px) {
-        width: 50%;
-        text-align: justify;
+      @media screen and (max-width: 960px) {
         line-height: 2.5rem;
         margin-bottom: 2.8rem;
         img {
-          height: 3rem;
+          height: 4rem;
         }
       }
     }
