--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -154,15 +154,37 @@
     text-align: center;
 
     p {
-      font-size: 2rem;
-      text-align: center;
-      @media screen and (max-width: 700px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      font-size: 1.8rem;
+
+      @media screen and (max-width: 500px) {
         font-size: 1.5rem;
       }
 
-      @media screen and (max-width: 500px) {
-        font-size: 1.35rem;
+      @media screen and (max-width: 400px) {
+        font-size: 1.2rem;
       }
+
+      // font-size: 2rem;
+      // text-align: center;
+      // @media screen and (max-width: 700px) {
+      //   font-size: 1.5rem;
+      // }
+
+      // @media screen and (max-width: 500px) {
+      //   font-size: 1.35rem;
+      // }
+
+      // @media screen and (max-width: 400px) {
+      //   font-size: 1.2rem;
+      // }
+
+      // @media screen and (max-width: 350px) {
+      //   font-size: 1.1rem;
+      // }
     }
     button {
       background-color: var(--color-secondary);
