--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,9 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol {
 }
 
 html {
-  font-size: 93%;
+  
+  font-size: 100%;
+  // font-size: 93%;
 
   @media screen and (max-width: 1600px) {
     font-size: 80%;
