updated: PC-OFICINA

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -308,11 +308,6 @@ h1 {
 
   }
 
-  // @media screen and (max-width: 600px) {
-  //   position: sticky;
-  // }
-
-
   img {
     margin-right: 5rem;
     margin-left: 1rem;
@@ -360,6 +355,9 @@ h1 {
   background: linear-gradient(to right, var(--color-primary), var(--color-primary-light)) !important;
   transition: height 0.4s ease;
   height: 5.5rem;
+  @media screen and (max-width: 600px) {
+    height: 6.5rem;
+  }
 
   .p-submenu-list {
     background-color: var(--color-primary) !important;
