--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -50,14 +50,17 @@ $transition-duration: 0.3s;
         i {
           font-size: 2.2rem;
           margin-top: 2rem;
+          @media screen and (max-width: 600px) {
+            font-size: 2.5rem;
+          }
         }
-        margin-right: 2rem;
+        margin-right: 3rem;
         color: #0096C2;
         transition: opacity 0.3s ease-in-out;
 
-        &:last-child {
-          margin-right: 0;
-        }
+        // &:last-child {
+        //   margin-right: 0;
+        // }
 
         &:hover {
           opacity: 0.7;
