--- a/src/app/client/pages/servicios/servicios.component.scss
+++ b/src/app/client/pages/servicios/servicios.component.scss
@@ -1,13 +1,6 @@
-// $color-background: #5ad8fe65;
-$color-background: #5ad8fe46;
 
 .servicios {
 
-  @media screen and (max-width: 600px) {
-    margin-top: 6.5rem;
-  }
-
-  
   &__content {
     display: flex;
     justify-content: space-around;
@@ -17,14 +10,14 @@ $color-background: #5ad8fe46;
     padding-bottom: 7rem;
 
     &--destacado {
-      background-color: $color-background;
+      background-color: #5ad8fe46;
     }
 
     @media screen and (max-width: 700px) {
       flex-direction: column;
       align-items: flex-start;
-      padding-bottom: 2rem;
-      padding-top: 2rem;
+      padding-bottom: 4.5rem;
+      padding-top: 4.5rem;
     }
   }
 
