cambiamos el height de las tarjetas en nosotros: PC-OFICINA

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -10,7 +10,7 @@
 
       <div class="cards-responsive">
         <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia"
-          [style]="{width: '15.625rem', height: '31.2rem', overflow: 'hidden'}">
+          [style]="{width: '16rem', height: '31.2rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               real_estate_agent
@@ -24,8 +24,8 @@
       </div>
 
       <div class="cards-responsive">
-        <p-card header="Especialistas en la Materia" subheader="Maestría en Ingeniería"
-          [style]="{width: '15.625rem', height: '31.2rem', overflow: 'hidden'}">
+        <p-card header="Especialistas en la Materia" subheader="Maestría en Ingeniería avanzada"
+          [style]="{width: '16rem', height: '31.2rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               engineering
@@ -40,7 +40,7 @@
 
       <div class="cards-responsive">
         <p-card header="Historial de éxito Demostrado" subheader="Logros Comprobados en Acción"
-          [style]="{width: '15.625rem', height: '31.2rem', overflow: 'hidden'}">
+          [style]="{width: '16rem', height: '31.2rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               workspace_premium
@@ -55,7 +55,7 @@
 
       <div class="cards-responsive">
         <p-card header="Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente"
-          [style]="{width: '15.625rem', height: '31.2rem', overflow: 'hidden'}">
+          [style]="{width: '16rem', height: '31.2rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               heat_pump_balance
@@ -69,8 +69,8 @@
       </div>
 
       <div class="cards-responsive">
-        <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica"
-          [style]="{width: '15.625rem', height: '31.2rem', overflow: 'hidden'}">
+        <p-card header="Innovación Tecnológica" subheader="Vanguardia en Tecnología Innovadora"
+          [style]="{width: '16rem', height: '31.2rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               captive_portal
@@ -78,8 +78,7 @@
           </ng-template>
           <p>
             Permanecemos actualizados con las últimas herramientas y tecnologías de vanguardia en la captura,
-            procesamiento e interpretación de datos, asegurando resultados precisos y confiables en todos nuestros
-            análisis.
+            procesamiento e interpretación de datos, asegurando resultados precisos y confiables.
           </p>
         </p-card>
       </div>
