--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -1,7 +1,7 @@
 
 
 .contacto {
-  
+
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -140,24 +140,19 @@
   }
 
   &__map  {
-    width: 100%;
+    width: 80rem;
     h2 {
       margin: auto;
       margin-bottom: 5rem;
     }
     iframe {
       display: flex;
-      width: 80%;
+      width: 100%;
       height: 30rem;
       margin-top: 5rem;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.3s;
       margin: auto;
-
-      @media screen and (max-width: 600px) {
-        width: 100%;
-        height: 20rem;
-      }
     }
   }
 
