--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -1,7 +1,7 @@
 
 
 .nosotros {
-  
+
   background-color: var(--color-background-light);
 
   &__content-1 {
@@ -110,6 +110,9 @@
 
     margin-bottom: 12rem;
 
+    @media screen and (max-width: 600px) {
+      margin-bottom: 8rem;
+    }
 
   }
 
@@ -138,8 +141,10 @@
     &__accordion {
       margin-top: 8rem;
       margin-bottom: 8rem;
+
       @media screen and (max-width: 600px) {
         margin-bottom: 0;
+        margin-top: 4rem;
       }
 
     }
@@ -150,6 +155,10 @@
   &__contact {
 
     text-align: center;
+
+    @media screen and (max-width: 600px) {
+      margin-top: 2.5rem;
+    }
 
     p {
       display: flex;
@@ -166,23 +175,6 @@
         font-size: 1.2rem;
       }
 
-      // font-size: 2rem;
-      // text-align: center;
-      // @media screen and (max-width: 700px) {
-      //   font-size: 1.5rem;
-      // }
-
-      // @media screen and (max-width: 500px) {
-      //   font-size: 1.35rem;
-      // }
-
-      // @media screen and (max-width: 400px) {
-      //   font-size: 1.2rem;
-      // }
-
-      // @media screen and (max-width: 350px) {
-      //   font-size: 1.1rem;
-      // }
     }
     button {
       background-color: var(--color-secondary);
