agregamos animaciones de aos a contacto y cambiamos en nosotros, tambien comprimimos el video del slider: PC-OFICINA

--- a/src/app/client/components/card-animated/card-animated.component.html
+++ b/src/app/client/components/card-animated/card-animated.component.html
@@ -1,4 +1,4 @@
-<div class="e-card playing" [style.width]="width" [style.height]="height">
+<div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500" class="e-card playing" [style.width]="width" [style.height]="height">
   <div class="image"></div>
 
   <div class="wave"></div>
